# monodeps

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  coverage.yaml
src/: cli.rs  config.rs  dependency.rs  graph.rs  main.rs  path.rs  service.rs  utils.rs
src/service/: dotnet.rs  flutter.rs  go.rs  javascript.rs  justfile.rs  kustomize.rs  makefile.rs  proto.rs
tests/: go_import01.go
tests/examples/full/: pubspec.yaml
tests/examples/full/just/: lib.just  module.just
tests/examples/full/k8s/base/: kustomization.yaml
tests/examples/full/proto/: api.proto  common.proto  model.proto
tests/examples/full/service-a/: main.go
tests/examples/full/service-b/: analysis_options.yaml  pubspec.yaml
tests/examples/full/service-c/: Depsfile  ServiceC.csproj
tests/examples/full/service-d/k8s/base/: kustomization.yaml
tests/examples/full/service-e/: Depsfile  justfile
tests/examples/full/service-f/: justfile  package.json
tests/examples/full/service-g/: service.proto
tests/examples/peer/lib-a/: Depsfile
tests/examples/peer/service/: Depsfile
tests/resources/: dotnet_proj01.csproj  go_import02.go
