[package]
authors = ["kongo2002 <kongo2002@gmail.com>"]
homepage = "https://github.com/kongo2002/monodeps"
repository = "https://github.com/kongo2002/monodeps"
description = "change detection CLI for mono-repository setups"
name = "monodeps"
version = "1.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
getopts = "0.2.21"
log = "0.4.27"
path-clean = "1.0.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
walkdir = "2.5.0"
yaml-rust = "0.4.5"

[dev-dependencies]
tempfile = "3.10.1"
